# opengl-vscode-cmake-template

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  lucidy-engine.code-workspace  main.cpp  opengl-workspace.code-workspace  the-wonders-of-mazalt.code-workspace
engine/LucidyEngine/: settings.hpp
engine/LucidyEngine/generic/: data_types.hpp  graphic_lib.hpp  logging.hpp  window_lib.hpp
engine/LucidyEngine/message_bus/: bus_node.hpp  message_bus.hpp
engine/LucidyEngine/scene/: scene.hpp  scene_controller.cpp  scene_controller.hpp
engine/LucidyEngine/window/: debug_window.cpp  debug_window.hpp  normal_window.cpp  normal_window.hpp  window.hpp
include/imgui/: imgui_internal.h
include/windows/x64/imgui/: imgui_internal.h
lib/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp
lib/windows/x64/imgui/: imgui.cpp  imgui_impl_glfw_gl3.cpp
lib/windows/x86/imgui/: imgui_draw.cpp
src/: CMakeLists.txt  main.cpp
src/engine/: lib_base.hpp  window_context.cpp  window_context.hpp
src/scenes/: example_scene.cpp  example_scene.hpp
